--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Анализатор файлов</title>
-    <link rel="stylesheet" href="../static/style.css">
-    <script src="../js/main.js"></script>
+    <link rel="stylesheet" href="static/style.css">
+    <script src="js/main.js"></script>
 </head>
 <body>
     <div class="container">
