--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,8 +25,8 @@
             </select>
 
             <!-- Кнопки для анализа -->
-            <button id="static-analysis" class="custom-button">Статический анализ</button>
-            <button id="dynamic-analysis" class="custom-button" onclick="startDynamicAnalyze()">Динамический анализ</button>
+            <button id="static-analysis" class="custom-button" onclick="startStaticAnalysis()">Статический анализ</button>
+            <button id="dynamic-analysis" class="custom-button" onclick="startDynamicAnalysis()">Динамический анализ</button>
         </div>
 
         <!-- Окно вывода результатов -->
