--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Анализатор файлов</title>
+    <title>Гвардеец</title>
     <link rel="stylesheet" href="static/style.css">
     <script src="js/main.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Инструмент анализа файлов</h1>
+        <h1>Инструмент анализа файлов "Гвардеец"</h1>
 
         <!-- Кнопка для выбора файла -->
         <div class="button-group">
